// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component TopicItem TopicItem renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 14,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginRight": 12,
        "paddingLeft": 16,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Object {
        "fontFamily": "Inter-Regular",
        "fontSize": 12,
      }
    }
  >
    Test
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "marginLeft": 7,
        "opacity": 1,
        "padding": 10,
        "paddingVertical": 10,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="close"
      size={13.33}
    />
  </View>
</View>
`;

exports[`component TopicItem TopicItem snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 14,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginRight": 12,
        "paddingLeft": 16,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Object {
        "fontFamily": "Inter-Regular",
        "fontSize": 12,
      }
    }
  >
    Test
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "marginLeft": 7,
        "padding": 10,
        "paddingVertical": 10,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="close"
      size={13.33}
    />
  </ForwardRef>
</View>
`;
